[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/wealrain"]
description = "a simple kv store"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.7",features = ["derive"] }
failure = "0.1.8"
serde = { version = "1.0.109", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
