[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["https://github.com/wealrain"]
description = "a simple kv store"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.7",features = ["derive"] }
failure = "0.1.8"
serde = { version = "1.0.109", features = ["derive"] }
serde_json = "1.0.107"
log = "0.4.6"
env_logger = "0.6.1"
sled = "0.34.7"
structopt = "0.2.15"
crossbeam = "0.7.1"
rayon = "1.0.3"
num_cpus = "1.10.0"
crossbeam-skiplist = "0.1.1"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.2.11"
rand = "0.6.5"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"